Meta is so meta!

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-name: Jacob Wejendorp
+name: dorp.io
+keywords: "angular, javascript, nodejs, algorithms, computer science"
 permalink: none
 markdown: redcarpet
 pygments: true
