--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,14 @@ markdown: kramdown
 highlighter: rouge
 
 excerpt_separator: "\n\n\n"
-permalink:   /posts/:title/
+permalink: /posts/:title/
 
 # Handling Reading
 exclude: [Gemfile, README.md]
 
 # Plugins
 gems:
+  - jekyll-redirect-from
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-feed
@@ -55,6 +56,7 @@ defaults:
       layout: project
 
 # Custom
+repository: wejendorp/dorp.io
 domain: dorp.io
 url: http://www.dorp.io
 title: dorp.io
