--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,11 @@ markdown: kramdown
 highlighter: rouge
 
 excerpt_separator: "\n\n\n"
-permalink: /posts/:title/
+# Outputting
+permalink: /post/:title/
+paginate: 3
+paginate_path: '/blog/page/:num/'
+timezone: Europe/Berlin
 
 # Handling Reading
 exclude: [Gemfile, README.md]
@@ -37,6 +41,7 @@ defaults:
       type: posts
     values:
       layout: post
+      comments: true
   -
     scope:
       path: ""
