--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ highlighter: rouge
 
 excerpt_separator: "\n\n\n"
 # Outputting
-permalink: /post/:title/
+permalink: /posts/:title/
 paginate: 5
-paginate_path: '/blog/page/:num/'
+paginate_path: '/posts/page/:num/'
 timezone: Europe/Berlin
 
 # Handling Reading
@@ -23,10 +23,10 @@ gems:
 collections:
   my_categories:
     output: true
-    permalink: /blog/category/:name/
+    permalink: /posts/category/:name/
   my_tags:
     output: true
-    permalink: /blog/tag/:name/
+    permalink: /posts/tag/:name/
 
 defaults:
   -
