May the farce be with you

--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ defaults:
 repository: wejendorp/dorp.io
 # domain: dorp.io
 url: https://dorp.io/
-baseurl: /
+baseurl: ""
 title: dorp.io
 description: Personal website of Jacob Wejendorp
 name: dorp
